# watermarks

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg  setup.py
scripts/: commongen-data.ipynb  fix-style.sh  hh-rlhf-data.ipynb
src/: detect.py  generate-chat.py  generate.py  levenshtein.pyx  main.py  models.py  ppl.py  score.py  utils.py  watermarks.py
